--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/cron": "^2.0.1",
     "@types/node-telegram-bot-api": "^0.61.3"
   }
 }
